@@ -23,7 +23,7 @@ var Filter;
 (function(Filter) {
     Filter.isEnabled = false;
     Filter.isHighlight = false;
-    
+
     Filter.AircraftFilter = {
         Altitude:       'alt',
         Ident:          'idn',
@@ -39,16 +39,17 @@ var Filter;
         Species:        'spc',
         Squawk:         'sqk',
         UserInterested: 'int',
-        Wtc:            'wtc'
+        Wtc:            'wtc',
+        EngineType:     'eng'
     };
-    
+
     Filter.FilterType = {
         OnOff:          0,
         TextMatch:      1,
         NumberRange:    2,
         EnumMatch:      3
     };
-    
+
     Filter.InputWidth = {
         Auto: '',
         OneChar: 'oneChar',
@@ -58,7 +59,7 @@ var Filter;
         NineChar: 'nineChar',
         Long: 'wide'
     };
-    
+
     Filter.Species = {
         None: 0,
         LandPlane: 1,
@@ -67,17 +68,30 @@ var Filter;
         Helicopter: 4,
         Gyrocopter: 5,
         Tiltwing: 6,
-        GroundVehicle: 7,
-        Tower: 8
+        Tiltrotor: 7,
+        GroundVehicle: 8,
+        Tower: 9,
+        Drone: 10,
+        Balloon: 11,
+        Paraglider: 12
     };
-    
+
     Filter.WakeTurbulenceCategory = {
         None: 0,
         Light: 1,
         Medium: 2,
         Heavy: 3
     };
-       
+
+    Filter.EngineType = {
+        None: 0,
+        Piston: 1,
+        Turbo: 2,
+        Jet: 3,
+        Electric: 4,
+        Rocket: 5
+    };
+
     Filter.Condition = {
         Equals: 0,
         NotEquals: 1,
@@ -90,7 +104,7 @@ var Filter;
         Ends: 8,
         NotEnds: 9
     };
-    
+
     Filter.ValueText = (function () {
         function ValueText(settings) {
             this.value = settings.value;
@@ -98,8 +112,8 @@ var Filter;
             this.selected = false;
         }
         return ValueText;
-    }());    
-    
+    }());
+
     Filter.ConditionList = [
         new Filter.ValueText({value: Filter.Condition.Equals, text: "equals"}),
         new Filter.ValueText({value: Filter.Condition.NotEquals, text: "not equals"}),
@@ -112,7 +126,7 @@ var Filter;
         new Filter.ValueText({value: Filter.Condition.Ends, text: "ends with"}),
         new Filter.ValueText({value: Filter.Condition.NotEnds, text: "ends not with"})
     ];
-    
+
     var AircraftFilterHandler = (function () {
         function AircraftFilterHandler(settings) {
             $.extend(this, settings);
@@ -145,9 +159,9 @@ var Filter;
                 var a = convert_altitude(aircraft.altitude, MapSettings.DisplayUnits);
                 if(a >= this.value1 && a <= this.value2) f = false;
                 if(this.condition === Filter.Condition.NotBetween) f = !f;
-                return f;                
+                return f;
             }
-            return false; 
+            return false;
         },
         validate: function(){
             this.value1 = Filter.validateNumber(this.value1, this.minimumValue, this.maximumValue);
@@ -160,14 +174,14 @@ var Filter;
             }
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.Ident] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.Ident,
         type: Filter.FilterType.TextMatch,
         label: 'Ident',
         inputWidth: Filter.InputWidth.SixChar,
         condition: Filter.Condition.Contains,
-        getFilterConditions: 
+        getFilterConditions:
              [ Filter.Condition.Equals,
                Filter.Condition.NotEquals,
                Filter.Condition.Contains,
@@ -179,23 +193,23 @@ var Filter;
              ],
         isFiltered: function(aircraft){
             if(this.isActive && this.value1 !== undefined){
-                return Filter.filterText(aircraft.flight, this.value1, this.condition);                
+                return Filter.filterText(aircraft.flight, this.value1, this.condition);
             }
-            return false; 
+            return false;
         },
         validate: function(){
             var s = this.value1.trim().substr(0,7).toUpperCase();
             this.value1 = s.replace(/[^0-9A-Z]/, "");
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.Country] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.Country,
         type: Filter.FilterType.TextMatch,
         label: 'Country',
         inputWidth: Filter.InputWidth.Long,
         condition: Filter.Condition.Contains,
-        getFilterConditions: 
+        getFilterConditions:
              [ Filter.Condition.Equals,
                Filter.Condition.NotEquals,
                Filter.Condition.Contains,
@@ -208,15 +222,15 @@ var Filter;
         isFiltered: function(aircraft){
             if(this.isActive && aircraft.icao !== null && this.value1 !== undefined){
                 var f = findICAORange(aircraft.icao);
-                return Filter.filterText(f.country, this.value1, this.condition);                
+                return Filter.filterText(f.country, this.value1, this.condition);
             }
-            return false; 
+            return false;
         },
         validate: function(){
             this.value1 = this.value1.trim().substr(0,30);
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.Distance] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.Distance,
         type: Filter.FilterType.NumberRange,
@@ -234,9 +248,9 @@ var Filter;
                 var s = convert_distance(aircraft.sitedist, MapSettings.DisplayUnits);
                 if(s >= this.value1 && s <= this.value2) f = false;
                 if(this.condition === Filter.Condition.NotBetween) f = !f;
-                return f;                
+                return f;
             }
-            return false; 
+            return false;
         },
         validate: function(){
             this.value1 = Filter.validateNumber(this.value1, this.minimumValue, this.maximumValue);
@@ -262,13 +276,13 @@ var Filter;
                 else
                     return !aircraft.civilmil;
             }
-            return false; 
+            return false;
         },
         validate: function(){
             return this.value1;
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.UserInterested] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.UserInterested,
         type: Filter.FilterType.OnOff,
@@ -282,13 +296,13 @@ var Filter;
                 else
                     return !aircraft.interesting;
             }
-            return false; 
+            return false;
         },
         validate: function(){
             return this.value1;
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.HideNoPosition] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.HideNoPosition,
         type: Filter.FilterType.OnOff,
@@ -298,20 +312,20 @@ var Filter;
             if(this.isActive && aircraft.position === null && this.value1){
                 return true;
             }
-            return false; 
+            return false;
         },
         validate: function(){
             return this.value1;
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.Icao] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.Icao,
         type: Filter.FilterType.TextMatch,
         label: 'Icao',
         inputWidth: Filter.InputWidth.SixChar,
         condition: Filter.Condition.Contains,
-        getFilterConditions: 
+        getFilterConditions:
              [ Filter.Condition.Equals,
                Filter.Condition.NotEquals,
                Filter.Condition.Contains,
@@ -323,23 +337,23 @@ var Filter;
              ],
         isFiltered: function(aircraft){
             if(this.isActive && this.value1 !== undefined){
-                return Filter.filterText(aircraft.icao, this.value1, this.condition); 
+                return Filter.filterText(aircraft.icao, this.value1, this.condition);
             }
-            return false; 
+            return false;
         },
         validate: function(){
             var s = this.value1.trim().substr(0,6).toUpperCase();
             this.value1 = s.replace(/[^0-9A-F]/, "");
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.TypeIcao] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.TypeIcao,
         type: Filter.FilterType.TextMatch,
         label: 'Type Icao',
         inputWidth: Filter.InputWidth.SixChar,
         condition: Filter.Condition.Contains,
-        getFilterConditions: 
+        getFilterConditions:
              [ Filter.Condition.Equals,
                Filter.Condition.NotEquals,
                Filter.Condition.Contains,
@@ -351,23 +365,23 @@ var Filter;
              ],
         isFiltered: function(aircraft){
             if(this.isActive && this.value1 !== undefined){
-                return Filter.filterText(aircraft.icaotype, this.value1, this.condition); 
+                return Filter.filterText(aircraft.icaotype, this.value1, this.condition);
             }
-            return false; 
+            return false;
         },
         validate: function(){
             var s = this.value1.trim().substr(0,4).toUpperCase();
             this.value1 = s.replace(/[^0-9A-Z]/, "");
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.Operator] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.Operator,
         type: Filter.FilterType.TextMatch,
         label: 'Operator',
         inputWidth: Filter.InputWidth.Long,
         condition: Filter.Condition.Contains,
-        getFilterConditions: 
+        getFilterConditions:
              [ Filter.Condition.Equals,
                Filter.Condition.NotEquals,
                Filter.Condition.Contains,
@@ -379,22 +393,22 @@ var Filter;
              ],
         isFiltered: function(aircraft){
             if(this.isActive && this.value1 !== undefined){
-                return Filter.filterText(aircraft.operator, this.value1, this.condition);                 
+                return Filter.filterText(aircraft.operator, this.value1, this.condition);
             }
-            return false; 
+            return false;
         },
         validate: function(){
             this.value1 = this.value1.trim().substr(0,30);
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.OperatorCode] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.OperatorCode,
         type: Filter.FilterType.TextMatch,
         label: 'Operator Code',
         inputWidth: Filter.InputWidth.ThreeChar,
         condition: Filter.Condition.Equals,
-        getFilterConditions: 
+        getFilterConditions:
              [ Filter.Condition.Equals,
                Filter.Condition.NotEquals
              ],
@@ -407,21 +421,21 @@ var Filter;
                 if(this.condition === Filter.Condition.NotEquals) f = !f;
                 return f;
             }
-            return false; 
+            return false;
         },
         validate: function(){
             var s = this.value1.trim().substr(0,3).toUpperCase();
             this.value1 = s.replace(/[^0-9A-Z]/, "");
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.Registration] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.Registration,
         type: Filter.FilterType.TextMatch,
         label: 'Registration',
         inputWidth: Filter.InputWidth.NineChar,
         condition: Filter.Condition.Contains,
-        getFilterConditions: 
+        getFilterConditions:
              [ Filter.Condition.Equals,
                Filter.Condition.NotEquals,
                Filter.Condition.Contains,
@@ -436,23 +450,23 @@ var Filter;
                 var r = aircraft.registration;
                 if(r !== null && r.startsWith("#"))
                     r = r.substr(2); // Remove DB entry marker if exists
-                return Filter.filterText(r, this.value1, this.condition);     
+                return Filter.filterText(r, this.value1, this.condition);
             }
-            return false; 
+            return false;
         },
         validate: function(){
             var s = this.value1.trim().substr(0,10).toUpperCase();
             this.value1 = s.replace(/[^0-9A-Z-+]/, "");
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.Species] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.Species,
         type: Filter.FilterType.EnumMatch,
         label: 'Species',
         condition: Filter.Condition.Equals,
         getFilterConditions: [Filter.Condition.Equals, Filter.Condition.NotEquals],
-        getEnumValues: 
+        getEnumValues:
             [
                 new Filter.ValueText({ value: Filter.Species.None, text: 'None' }),
                 new Filter.ValueText({ value: Filter.Species.LandPlane, text: 'Land Plane' }),
@@ -461,8 +475,12 @@ var Filter;
                 new Filter.ValueText({ value: Filter.Species.Helicopter, text: 'Helicopter' }),
                 new Filter.ValueText({ value: Filter.Species.Gyrocopter, text: 'Gyrocopter' }),
                 new Filter.ValueText({ value: Filter.Species.Tiltwing, text: 'Tiltwing' }),
+                new Filter.ValueText({ value: Filter.Species.Tiltwing, text: 'Tiltrotor' }),
+                new Filter.ValueText({ value: Filter.Species.Drone, text: 'Drone' }),
+                new Filter.ValueText({ value: Filter.Species.Balloon, text: 'Ballon' }),
+                new Filter.ValueText({ value: Filter.Species.Paraglider, text: 'Paraglider' }),
                 new Filter.ValueText({ value: Filter.Species.GroundVehicle, text: 'Ground Vehicle' }),
-                new Filter.ValueText({ value: Filter.Species.Tower, text: 'Radio Mast' })
+                new Filter.ValueText({ value: Filter.Species.Tower, text: 'Radio Tower' }),
             ],
         isFiltered: function(aircraft){
             if(this.isActive && aircraft.species !== null && this.value1){
@@ -474,18 +492,36 @@ var Filter;
                         break;
                     case Filter.Species.SeaPlane:
                         if(s === 'S') f = false;
-                        break; 
+                        break;
                     case Filter.Species.Amphibian:
                         if(s === 'A') f = false;
-                        break;                            
+                        break;
                     case Filter.Species.Helicopter:
                         if(s === 'H') f = false;
-                        break;                     
+                        break;
                     case Filter.Species.Gyrocopter:
                         if(s === 'G') f = false;
-                        break;                     
+                        break;
                     case Filter.Species.Tiltwing:
+                        if(s === 'W') f = false;
+                        break;
+                    case Filter.Species.Tiltrotor:
+                        if(s === 'R') f = false;
+                        break;
+                    case Filter.Species.GroundVehicle:
+                        if(s === 'V') f = false;
+                        break;
+                    case Filter.Species.Tower:
                         if(s === 'T') f = false;
+                        break;
+                    case Filter.Species.Drone:
+                        if(s === 'D') f = false;
+                        break;
+                    case Filter.Species.Balloon:
+                        if(s === 'B') f = false;
+                        break;
+                    case Filter.Species.Paraglider:
+                        if(s === 'P') f = false;
                         break;
                     default:
                         break;
@@ -493,17 +529,17 @@ var Filter;
                 if(this.condition === Filter.Condition.NotEquals) f = !f;
                 return f;
             }
-            return false;                 
+            return false;
         },
         validate: function(){
             this.value1 = Number(this.value1);
             if(this.value1 < Filter.Species.None)
                 this.value1 = Filter.Species.None;
-            if(this.value1 > Filter.Species.Tower)
-                this.value1 = Filter.Species.Tower;
+            if(this.value1 > Filter.Species.Paraglider)
+                this.value1 = Filter.Species.Paraglider;
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.Squawk] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.Squawk,
         type: Filter.FilterType.NumberRange,
@@ -521,23 +557,23 @@ var Filter;
                 var s = Number(aircraft.squawk);
                 if(s >= this.value1 && s <= this.value2) f = false;
                 if(this.condition === Filter.Condition.NotBetween) f = !f;
-                return f;                
+                return f;
             }
-            return false; 
+            return false;
         },
         validate: function(){
             this.value1 = Filter.validateNumber(this.value1, this.minimumValue, this.maximumValue);
             this.value2 = Filter.validateNumber(this.value2, this.minimumValue, this.maximumValue);
         }
     });
-    
+
     Filter.aircraftFilterHandlers[Filter.AircraftFilter.Wtc] = new Filter.AircraftFilterHandler({
         property: Filter.AircraftFilter.Wtc,
         type: Filter.FilterType.EnumMatch,
         label: 'Wake Turbulence',
         condition: Filter.Condition.Equals,
         getFilterConditions: [Filter.Condition.Equals, Filter.Condition.NotEquals],
-        getEnumValues: 
+        getEnumValues:
             [
                 new Filter.ValueText({ value: Filter.WakeTurbulenceCategory.None, text: 'None' }),
                 new Filter.ValueText({ value: Filter.WakeTurbulenceCategory.Light, text: 'Light' }),
@@ -564,7 +600,7 @@ var Filter;
                 if(this.condition === Filter.Condition.NotEquals) f = !f;
                 return f;
             }
-            return false; 
+            return false;
         },
         validate: function(){
             this.value1 = Number(this.value1);
@@ -574,7 +610,60 @@ var Filter;
                 this.value1 = Filter.WakeTurbulenceCategory.Heavy;
         }
     });
-  
+
+    Filter.aircraftFilterHandlers[Filter.AircraftFilter.EngineType] = new Filter.AircraftFilterHandler({
+        property: Filter.AircraftFilter.EngineType,
+        type: Filter.FilterType.EnumMatch,
+        label: 'Engine Type',
+        condition: Filter.Condition.Equals,
+        getFilterConditions: [Filter.Condition.Equals, Filter.Condition.NotEquals],
+        getEnumValues:
+            [
+                new Filter.ValueText({ value: Filter.EngineType.None, text: 'None' }),
+                new Filter.ValueText({ value: Filter.EngineType.Piston, text: 'Piston' }),
+                new Filter.ValueText({ value: Filter.EngineType.Turbo, text: 'Turboshaft' }),
+                new Filter.ValueText({ value: Filter.EngineType.Jet, text: 'Jet' }),
+                new Filter.ValueText({ value: Filter.EngineType.Electric, text: 'Electric' }),
+                new Filter.ValueText({ value: Filter.EngineType.Rocket, text: 'Rocket' })
+            ],
+        isFiltered: function(aircraft){
+            if(this.isActive && aircraft.species !== null && this.value1){
+                var f = true;
+                var s = aircraft.species.substr(2,1);
+                switch(this.value1){
+                    case Filter.EngineType.Piston:
+                        if(s === 'P') f = false;
+                        break;
+                    case Filter.EngineType.Turbo:
+                        if(s === 'T') f = false;
+                        break;
+                    case Filter.EngineType.Jet:
+                        if(s === 'J') f = false;
+                        break;
+                    case Filter.EngineType.Electric:
+                        if(s === 'E') f = false;
+                        break;
+                    case Filter.EngineType.Rocket:
+                        if(s === 'R') f = false;
+                        break;
+                    default:
+                        f = false;
+                        break;
+                }
+                if(this.condition === Filter.Condition.NotEquals) f = !f;
+                return f;
+            }
+            return false;
+        },
+        validate: function(){
+            this.value1 = Number(this.value1);
+            if(this.value1 < Filter.EngineType.None)
+                this.value1 = Filter.EngineType.None;
+            if(this.value1 > Filter.EngineType.Rocket)
+                this.value1 = Filter.EngineType.Rocket;
+        }
+    });
+
 })(Filter || (Filter = {}));
 
 /* Validate a number from user input */
@@ -594,23 +683,23 @@ Filter.filterText = function(haystack, needle, condition){
     if(haystack === null) return true;
     var h = haystack.trim().toUpperCase();
     var n = needle.trim().toUpperCase();
-    switch(condition){    
+    switch(condition){
         case Filter.Condition.Equals:
             if(h === n) return false;
             break;
-            
+
         case Filter.Condition.NotEquals:
             if(h !== n) return false;
             break;
-        
+
         case Filter.Condition.Contains:
             if(h.search(n) !== -1) return false;
             break;
-            
+
         case Filter.Condition.NotContains:
             if(h.search(n) === -1) return false;
             break;
-            
+
         case Filter.Condition.Starts:
             return !h.startsWith(n);
 
@@ -635,7 +724,7 @@ function initializeFilters() {
         var m = "<option value=\""+key+"\">"+Filter.aircraftFilterHandlers[key].label+"</option>\n";
         $("#filter_selector").append(m);
     }
-   
+
     $("#enable_filter_checkbox").checkboxradio({ icon: false });
     $("#enable_filter_checkbox").prop('checked', Filter.isEnabled).checkboxradio("refresh");
     $("#enable_filter_checkbox").on("change", function(){
@@ -663,14 +752,14 @@ function initializeFilters() {
 function onFilterAddClick(e) {
     var key = $("#filter_selector").val();
     addFilterListEntry(key, null, "", "");
-};    
+};
 
 /* Add new filter entry to the list */
 function addFilterListEntry(key, condition, v1, v2){
     var filterHandler = Filter.aircraftFilterHandlers[key];
     $("#filter_list").append("<li></li>");
     var filterListEntry = $( "#filter_list li:last-of-type" );
-    
+
     filterListEntry.append('<span class="short">'+filterHandler.label+'</span>');
     /* Create condition list*/
     var l = filterHandler.getFilterConditions.length;
@@ -686,7 +775,7 @@ function addFilterListEntry(key, condition, v1, v2){
         else
             c.val(filterHandler.condition);
     }
-    
+
     /* Create input mask depending on filter type */
     switch(filterHandler.type){
         case Filter.FilterType.OnOff:
@@ -716,11 +805,11 @@ function addFilterListEntry(key, condition, v1, v2){
             }
             if(v1 !== null)
                 c.val(v1);
-            break;            
+            break;
         default:
             break;
     }
-    
+
     filterListEntry.append('<button class="ui-button ui-widget ui-corner-all ui-button-icon-only" role="button" value="'+key+'">'+
                            '<span class="ui-icon ui-icon-trash"></span>'+
                            '</button>');
@@ -733,7 +822,7 @@ function addFilterListEntry(key, condition, v1, v2){
 /* Prevent adding a filter that is already in the list */
 function onFilterSelectorClose(e){
     /* Each filter can be added only once */
-    var filterHandler = Filter.aircraftFilterHandlers[e.target.value];    
+    var filterHandler = Filter.aircraftFilterHandlers[e.target.value];
     if(filterHandler.isActive === true) {
         $("#filter_add_button").button( "option", "disabled", true );
     } else {
@@ -784,7 +873,7 @@ function onFilterChange(e){
         default:
             break;
     }
-    
+
     /* Save filter settings to indexedDB */
     if(filterHandler !== undefined){
         var f = {
@@ -812,7 +901,7 @@ function refreshFilterList(){
             $(this).children("#input_value1").val(filterHandler.value1.toFixed(filterHandler.decimalPlaces));
             $(this).children("#input_value2").val(filterHandler.value2.toFixed(filterHandler.decimalPlaces));
         }
-    });    
+    });
 }
 
 /* Restore filters from last session */
